--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,12 +10,9 @@ $max_screen_size: 3840;
 $header_text_val: 36px;
 
 // Accent Hover
-$hover_text_color: #F8ECE2;
+$hover_text_color: #f8ece2;
 
 // Landing page background
-$grad_a: #FFE1C9;
-$grad_b: #1F303C;
-;
-
-$red: #E43131;
-
+$grad_a: #ffe1c9;
+$grad_b: #1f303c;
+$red: #e43131;
