--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,7 @@
 @import "./navbar.scss";
 @import "./variables.scss";
 @import "./projects.scss";
+@import "./eyes.scss";
 
 * {
   box-sizing: border-box;
@@ -62,10 +63,13 @@
   border: 1px solid white;
   border-radius: 100%;
   padding: 20px;
+  z-index: 2;
 }
 
 .main a:hover {
   transform: rotate(15deg);
+  z-index: 2;
+
 }
 
 #plus {
@@ -144,14 +148,6 @@
   width: 291px;
 }
 
-#eyes {
-  position: absolute;
-  left: 810px;
-  top: 571px;
-  animation-delay: 3s;
-  width: 90px;
-}
-
 .hvr-grow {
   display: inline-block;
   vertical-align: middle;
@@ -167,71 +163,4 @@
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1);
-}
-
-/* Hang */
-@-webkit-keyframes hvr-hang {
-  0% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-  50% {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-  100% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-}
-@keyframes hvr-hang {
-  0% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-  50% {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-  100% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-}
-@-webkit-keyframes hvr-hang-sink {
-  100% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-}
-@keyframes hvr-hang-sink {
-  100% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-}
-.hvr-hang {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-.hvr-hang:hover,
-.hvr-hang:focus,
-.hvr-hang:active {
-  -webkit-animation-name: hvr-hang-sink, hvr-hang;
-  animation-name: hvr-hang-sink, hvr-hang;
-  -webkit-animation-duration: 0.3s, 1.5s;
-  animation-duration: 0.3s, 1.5s;
-  -webkit-animation-delay: 0s, 0.3s;
-  animation-delay: 0s, 0.3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
 }
