--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -63,12 +63,12 @@
   border: 1px solid white;
   border-radius: 100%;
   padding: 20px;
-  z-index: 2;
+  z-index: 1000000;
 }
 
 .main a:hover {
   transform: rotate(15deg);
-  z-index: 2;
+  z-index: 1000000;
 
 }
 
