--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,16 +1,13 @@
 @import "./variables.scss";
 @import "animate.css";
 
-
-:root {
-    --animate-duration: 800ms;
-    background-color: $palegreen;
+.all-projects {
+    background-color: $palegrey;
 }
 
 .all-projects:last-child {
-    margin-bottom: 100px;
+    margin-bottom: 170px;
 }
-
 
 .container {
     display: flex;
@@ -20,8 +17,18 @@
     padding-right: 250px;
     padding-top: 170px;
     color: $red;
-    background-color: #D9DAC9;
+    background-color: $palegrey;
+}
 
+.container a {
+    text-decoration: none;
+    color: $red;
+}
+
+.container a:hover {
+    color: black;
+    transition: 0.5s ease;
+    cursor: pointer;
 }
 
 .container h3 {
@@ -59,10 +66,4 @@
     width: 500px;
     margin-top: 50px
 
-}
-
-.container a:hover {
-    color: black;
-    transition: 0.5s ease;
-    cursor: pointer;
 }
