--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -13,8 +13,15 @@ $header_text_val: 36px;
 $hover_text_color: #f8ece2;
 
 // Landing page background
-$grad_a: #ffe1c9;
-$grad_b: #1f303c;
 $red: #e43131;
-$palegreen: #D9DAC9;
+$palegrey: #F3F3F3;
+$darkgrey: #1C1C1C;
+$pink: #FFAEDF;
+
+
+// UID vars
+$c_header_text: 42px;
+$c_header_height: 46px;
+
+
 
