--- a/styles/_casestudy.scss
+++ b/styles/_casestudy.scss
@@ -1,105 +1,125 @@
-
 @import "./variables.scss";
 
 section {
-display: flex;
+  display: flex;
   flex-direction: column;
   padding-left: 163px;
   padding-right: 162px;
 }
 
 .stuff {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-
 
 .casestudy-intro {
-    display: flex;
-    flex-direction: row;
-    padding-top: 218px;
-    font-size: 14px;
-    line-height: 18px;
+  display: flex;
+  flex-direction: row;
+  padding-top: 218px;
+  font-size: 14px;
+  line-height: 18px;
 }
 
-
 .col-1 p {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .col-2 {
-    max-width: 135px;
-    margin-right: 60px;
-    padding-top: 24px;
+  max-width: 135px;
+  margin-right: 60px;
+  padding-top: 24px;
 }
 
 .stats-title {
-    opacity: 60%;
-    padding-bottom: 5px;
+  opacity: 60%;
+  padding-bottom: 5px;
 }
 
 .stats-text {
-    padding-bottom: 28px;
+  padding-bottom: 28px;
 }
 
 .col-3 {
-    max-width: 665px;
+  max-width: 665px;
 }
 
 .col-3 h1 {
-    font-size: 88px;
-    line-height: 92px;
-    padding-bottom: 32px;
+  font-size: 88px;
+  line-height: 92px;
+  padding-bottom: 32px;
 }
 
 .col-3 p {
-    font-size: 24px;
-    line-height: 28px;
-    padding-bottom: 32px;
+  font-size: 24px;
+  line-height: 28px;
+  padding-bottom: 32px;
 }
 
-
 .content-text {
-    max-width: 655px;
-    padding-top: 90px;
+  max-width: 655px;
+  padding-top: 90px;
 }
 
 .content-text h1 {
-    font-size: 42px;
-    line-height: 46px;
+  font-size: 42px;
+  line-height: 46px;
 }
 
 .content-image img {
-    width: 100%;
-    max-width: 1115px;
-
-    padding-top: 90px;
-
+  width: 100%;
+  max-width: 1115px;
+  padding-top: 90px;
 }
+
 .content-text p {
-    padding-top: 11px;
-    font-size: 16px;
-    line-height: 20px;
+  padding-top: 11px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 section {
-    padding-bottom: 100px;
+  padding-bottom: 100px;
 }
 
-.bottom{
-    max-width: 655px;
+.bottom {
+  max-width: 655px;
+  padding-top: 90px;
+  font-size: 16px;
+  line-height: 20px;
+  align-self: center;
+}
+
+.bottom a {
+  text-decoration: none;
+  color: $red;
+}
+
+.bottom a {
+  text-decoration: none;
+  color: $red;
+}
+
+@media only screen and (max-width: 1000px) {
+  section {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .col-3 h1 {
+    font-size: 56px;
+  }
+  .col-3 p {
+    font-size: 18px;
+  }
+
+  .content-image img {
+    width: 100%;
+    max-width: 1000px;
     padding-top: 90px;
-    font-size: 16px;
-    line-height: 20px;
-    align-self: center;
-}
+  }
 
-.bottom a {
-    text-decoration: none;
-    color: $red;
-}
-
-.bottom a {
-    text-decoration: none;
-    color: $red;
+  .casestudy-intro {
+    font-size: 12px;
+    line-height: 14px;
+  }
 }
