--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -19,13 +19,12 @@
 }
 
 .footer-socials a {
-    margin-right: 32px;
+    padding-right: 32px;
     text-decoration: none;
     color: $pink;
 }
 
 .footer-socials a:hover {
-    margin-right: 32px;
     color: $palegrey;
     transition: 0.3s ease;
 }
@@ -38,6 +37,27 @@
     align-items: center;
 }
 
-.footer-email svg {
-    margin-right: 15px;
+.footer-email p {
+    padding-left: 5px;
+}
+
+@media only screen and (max-width: 500px) {
+
+
+    .footer-container {
+        height: 100px;
+        font-size: 12px;
+    }
+
+    .footer-socials a {
+        padding-bottom: 5px;
+    }
+
+.footer-socials {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 50px
+}
+
 }
