--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -1,51 +1,34 @@
 @import "./variables.scss";
 
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
+nav {
+  background: transparent;
   top: 0;
-  z-index: 999;
-  padding: 50px 40px 0px 40px;
-  background-color: $red;
+  position: fixed;
+  z-index: 1;
+  width:100%;
 }
 
-.nav-links-container {
+.nav {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  padding: 20px;
+  justify-content: space-between;
 }
 
-.nav-links-container :first-child {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#right-nav a{
+padding-left: 10px;
 }
 
-.nav-links-container :first-child::after {
-  content: "";
-  display: block;
-  width: 1rem;
+.nav  a{
+  color: $pink;
 }
 
-.nav-links-container :last-child {
-  position: relative;
-}
-
-.nav-text {
-  font-variant-caps: all-small-caps;
-  // color: $grad_b;
-  text-decoration: none;
-}
-
-.nav-text-active {
-  font-variant-caps: all-small-caps;
-  // color: $grad_a;
+.nav a:hover{
   color: black;
-  text-decoration: none;
-}
+  transition: 0.3s;
+  cursor: pointer;
+  }
 
-.nav-text:hover {
-  color: #0fa66e;
-  transition: 0.4s;
-}
+
+  
+  
