--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,13 +8,12 @@
 
 :root {
   background-color: $palegrey;
-
 }
 
 .main {
   width: 100%;
   width: 100vw;
-  background-color: #e43131;
+  background-color: $red;
   height: 753px;
   top: 0;
 }
@@ -25,10 +24,11 @@
   font-style: normal;
   font-weight: 400;
   list-style: none;
+  text-decoration: none;
   margin: 0;
   padding: 0;
   // background-color: $palegrey;
-  }
+}
 
 .main h1 {
   color: white;
@@ -176,4 +176,225 @@
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1);
+}
+
+@media only screen and (max-width: 1400px) and (min-width: 1000px) {
+  #is {
+    left: 323px;
+    top: 118px;
+  }
+
+  #a {
+    left: 167px;
+    top: 238px;
+  }
+
+  #designer {
+    left: 261px;
+    top: 242.04px;
+  }
+
+  #plus {
+    left: 695px;
+    top: 264px;
+  }
+
+  .amongothers {
+    left: 764px;
+    top: 284px;
+  }
+
+  #scroll {
+    left: 207px;
+    top: 514px;
+  }
+
+  #to {
+    left: 414px;
+    top: 624px;
+  }
+
+  #see {
+    left: 577px;
+    top: 584px;
+  }
+
+  #herwork {
+    left: 688px;
+    top: 675px;
+  }
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 800px) {
+  #catu {
+    left: 41px;
+    top: 72px;
+  }
+  #is {
+    left: 191px;
+    top: 142px;
+  }
+
+  #a {
+    left: 317px;
+    top: 118px;
+  }
+
+  #designer {
+    left: 41px;
+    top: 240px;
+  }
+
+  #plus {
+    left: 455px;
+    top: 269px;
+  }
+
+  .amongothers {
+    left: 518px;
+    top: 288px;
+  }
+
+  #scroll {
+    left: 54px;
+    top: 494px;
+  }
+
+  #to {
+    left: 222px;
+    top: 608px;
+  }
+
+  #see {
+    left: 374px;
+    top: 575px;
+  }
+
+  #herwork {
+    left: 485px;
+    top: 696px;
+  }
+}
+
+@media only screen and (max-width: 800px) and (min-width: 560px)  {
+  .main h1 {
+    font-size: 42px;
+  }
+
+  .main {
+    height: 828px;
+  }
+
+  #catu {
+    left: 62px;
+    top: 50px;
+  }
+  #is {
+    left: 95px;
+    top: 150px;
+  }
+
+  #a {
+    left: 229px;
+    top: 80px;
+  }
+
+  #designer {
+    left: 187px;
+    top: 205px;
+  }
+
+  #plus {
+    left: 116px;
+    top: 367px;
+  }
+
+  .amongothers {
+    left: 195px;
+    top: 367px;
+  }
+
+  #scroll {
+    left: 70px;
+    top: 596px;
+  }
+
+  #to {
+    left: 195px;
+    top: 680px;
+  }
+
+  #see {
+    left: 304px;
+    top: 638px;
+  }
+
+  #herwork {
+    left: 347px;
+    top: 768px;
+  }
+}
+
+
+@media only screen and (max-width: 560px) {
+  .main h1 {
+    font-size: 42px;
+  }
+
+  .main {
+    height: 890px;
+    max-width: 1200px;
+    width:100%;
+  }
+
+  #catu {
+    left: 62px;
+    top: 50px;
+    
+  }
+  #is {
+    left: 227px;
+    top: 92px;
+  }
+
+  #a {
+    left: 131px;
+    top: 150px;
+    
+  }
+
+  #designer {
+    left: 27px;
+    top: 234px;
+  }
+
+  #plus {
+    left: 183px;
+    top: 362px;
+  }
+
+  .amongothers {
+    left: 97px;
+    top: 429px;
+  }
+
+  #scroll {
+    left: 23px;
+    top: 617px;
+  }
+
+  #to {
+    left: 87px;
+    top: 748px;
+  }
+
+  #see {
+    left: 195px;
+    top: 688px;
+  }
+
+  #herwork {
+    left: 177px;
+    top: 830px;
+  }
 }
