--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -11,7 +11,9 @@ nav {
 .nav {
   display: flex;
   flex-direction: row;
-  padding: 20px;
+  padding-left: $margin;
+  padding-right: $margin;
+padding-top: 30px;
   justify-content: space-between;
 }
 
@@ -20,11 +22,12 @@ padding-left: 10px;
 }
 
 .nav  a{
-  color: $pink;
+  color: black;
+  text-decoration: none;
 }
 
 .nav a:hover{
-  color: black;
+  color: $pink;
   transition: 0.3s;
   cursor: pointer;
   }
