set up gallery :))))

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "./footer.scss";
 @import "./about.scss";
 @import "./locomotive.scss";
+@import "./masonry.scss";
 
 @font-face {
   src: url(../fonts/Telegraf-Regular.woff2) format("woff2"),
