style fix for gallery

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,8 +8,8 @@ $pink: #FFAEDF;
 // Margins
 $margin: 80px;
 $margin_mobile: 20px;
-$margin_tablet: 40px
-
+$margin_tablet: 40px;
+$masonry_margin: 10px;
 // // Breakpoints
 // $mobile_screen_size: 800px;
 
