--- a/styles/_masonry.scss
+++ b/styles/_masonry.scss
@@ -4,17 +4,20 @@
     display: -webkit-box; /* Not needed if autoprefixing */
     display: -ms-flexbox; /* Not needed if autoprefixing */
     display: flex;
-    margin-left: -5px; /* gutter size offset */
+    margin-left: -$masonry_margin; /* gutter size offset */
     width: auto;
   }
   .my-masonry-grid_column {
-    padding-left: 5px; /* gutter size */
+    padding-left: $masonry_margin; /* gutter size */
     background-clip: padding-box;
   }
   
   /* Style your items */
   .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
-    margin-bottom: 30px;
+    margin-bottom: $masonry_margin;
+    border-style: dashed;
+    border-color: $red;
+    border-width: 1px;
   }
 
   .gallery-container {
@@ -25,6 +28,7 @@
 
   .gallery-container p {
     font-size: 12px;
+    padding-left: 5px;
 }
 
   .gallery-item img {
