--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ img {
 
 body {
     background: #CCCCFF;
+    display: block;
 }
+
+
 
 .banner {
     font-size: 1.75rem;
@@ -16,8 +19,34 @@ body {
 }
 
 .main {
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 20px;
-    outline: 1px solid white;
+    max-width: 640px;
+    margin: 1em auto;
+    padding: 1em;
+    overflow: hidden;
+}
+
+table {
+    display: table;
+    border-collapse: separate;
+    box-sizing: border-box;
+    text-indent: initial;
+    unicode-bidi: isolate;
+    border-spacing: 2px;
+}
+
+table,
+th,
+td {
+    border: 1px solid #B5B5D9;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 1em;
+    vertical-align: top;
+}
+
+h1 {
+    font-weight: 400;
+    font-style: italic;
 }
